Overhauled the design of the Portfolio page, looks more consistent with the design language of the About Me page now. Content is now more centered due to margins, color profile matches the rest of the site, project titles are no longer links as the project images are now buttons which will link to the project pages, title of page is now added, and text looks a lot more readable. About Me page got some minor adjustments related to text shadows as well as fixing the resume button hover colors to match the intended color profile of the website (blue instead of purple tones). Will now make adjustments to the Contact page

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap');
+
 body {
   margin: 0;
   background: #BAE2F2 !important;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Oswald', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -101,17 +103,18 @@ code {
   width: 100%;
   text-align: center;
   overflow: hidden;
+  filter: drop-shadow(0px 6.7px 5.3px rgba(0,0,0,0.3));
 }
 
 .headerComponent h1 {
   color: white;
-  margin-top: 2rem;
+  margin-top: 1rem;
   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
 }
 
 .headerComponent h2 {
   color: white;
-  opacity: 80%;
+  /* opacity: 80%; */
   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
 }
 
@@ -132,7 +135,7 @@ code {
   color: black;
   -webkit-animation: text-shadow-pop-br 0.3s both !important;
   animation: text-shadow-pop-br 0.3s both !important;
-  
+  /* ADJUST THE ANIMATIONS/COLORS, MAYBE MAKE IT JUST THE BOX THAT GETS A SHADOW? */
 }
 
 @media screen and (max-width: 1199px) {
@@ -333,6 +336,10 @@ code {
   /* border: 5px solid #2B52C1; */
 }
 
+.aboutPage h1 {
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
+}
+
 .bioContainer .row {
   padding-top: 2rem;
   border-top: 0.1rem solid gray;
@@ -351,13 +358,14 @@ code {
   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
   text-decoration: none;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
-  font-weight: bold;
+  /* font-weight: bold; */
   transition: all 0.4s ease-in-out;
 }
 
 .resumeButton:hover {
   color: #fff;
-  background-color: rgb(66, 55, 109);
+  /* background-color: rgb(66, 55, 109); */
+  background-color: #13307e;
 }
 
 .profilePicture {
@@ -365,9 +373,9 @@ code {
   width: 140px;
   height: 140px;
   border-radius: 100%;
-  border: 5px solid #2B52C1;
-  margin-left: 5%;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+  /* border: 5px solid #2B52C1; */
+  /* margin-left: 5%; */
+  filter: drop-shadow(6.7px 6.7px 5.3px rgba(0,0,0,0.3));
 }
 
 .mainButtonContainer {
@@ -423,6 +431,7 @@ code {
   text-align: center;
   position: absolute;
   top: 25%;
+  filter: drop-shadow(6.7px 6.7px 5.3px rgba(0,0,0,0.2));
 }
 
 .hiddenInstructions {
@@ -529,6 +538,23 @@ code {
   transition: 1s;
 }
 
+.portfolioContainer {
+  margin-left: 10% !important;
+  margin-right: 10% !important;
+  padding: 1rem 1.5rem 1.5rem 1.5rem;
+  background-color: white;
+  border-radius: 1rem;
+}
+
+.portfolioContainer h1 {
+  margin-bottom: 1rem;
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
+}
+
+.imageContainer {
+  justify-content: center !important;
+  text-align: center !important;
+}
 
 .projectItem-bg {
   /* max-width: 350px;
@@ -537,14 +563,21 @@ code {
   min-height: 197px; */
   width: 80%;
   height: auto;
-  border: 5px solid violet;
+  /* border: 5px solid violet; */
   border-radius: 1rem;
   opacity: 1;
   transition: .5s ease;
   backface-visibility: hidden;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   margin:0em;
+  filter: drop-shadow(5px 5px 8px rgba(0,0,0,0.3));
+  cursor: pointer;
+}
+
+.projectItem-bg:hover {
+  opacity: 0.5;
+  filter: drop-shadow(5px 5px 8px rgba(0,0,0,0.49));
 }
 
 .projectTitle {
@@ -557,7 +590,7 @@ code {
   text-decoration: none;
   color: black;
   transition: 0.3s ease-in-out;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
   display: inline-block;
 }
 
@@ -568,18 +601,19 @@ code {
 
 .projectText {
   padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  /* padding-bottom: 0.5rem; */
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 
-.projectText:hover {
+/* .projectText:hover {
   color: violet;
-}
+} */
 
 .githubText {
   font-size: 1.5rem;
   padding: 5px;
   border-radius: 0.5rem;
-  color: #fff;
+  color: #fff !important;
   background-color: #2B52C1;
   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
   text-decoration: none;
@@ -591,7 +625,8 @@ code {
 
 .githubText:hover {
   color: #fff;
-  background-color: rgb(66, 55, 109);
+  /* background-color: rgb(66, 55, 109); */
+  background-color: #13307e;
 }
 
 /* 
